// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features Page renders Features Page 1`] = `
<div>
  <div
    class="feature-container"
  >
    <div
      class="bg"
    />
    <div
      class="bg bg2"
    />
    <div
      class="bg bg3"
    />
    <div
      class="feature-cards-conatainer"
    >
      <div
        class="feature-card"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root feature-card-mui css-14cyfy1-MuiPaper-root-MuiCard-root"
          data-testid="feature-card-mui"
          id="miscellaneousCoolStuff"
        >
          <div
            class="MuiCardHeader-root feature-cardheader css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                cardMiscellaneousTitle
              </span>
            </div>
            <div
              class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
            >
              <button
                aria-label="cardMiscellaneousInformation"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="info-card-mui"
                tabindex="0"
                type="button"
              >
                <svg
                  height="14px"
                  id="Capa_1"
                  version="1.1"
                  viewBox="0 0 111.577 111.577"
                  width="14px"
                  x="0px"
                  xml:space="preserve"
                  y="0px"
                >
                  <g>
                    <path
                      d="M78.962,99.536l-1.559,6.373c-4.677,1.846-8.413,3.251-11.195,4.217c-2.785,0.969-6.021,1.451-9.708,1.451 c-5.662,0-10.066-1.387-13.207-4.142c-3.141-2.766-4.712-6.271-4.712-10.523c0-1.646,0.114-3.339,0.351-5.064 c0.239-1.727,0.619-3.672,1.139-5.846l5.845-20.688c0.52-1.981,0.962-3.858,1.316-5.633c0.359-1.764,0.532-3.387,0.532-4.848 c0-2.642-0.547-4.49-1.636-5.529c-1.089-1.036-3.167-1.562-6.252-1.562c-1.511,0-3.064,0.242-4.647,0.71 c-1.59,0.47-2.949,0.924-4.09,1.346l1.563-6.378c3.829-1.559,7.489-2.894,10.99-4.002c3.501-1.111,6.809-1.667,9.938-1.667 c5.623,0,9.962,1.359,13.009,4.077c3.047,2.72,4.57,6.246,4.57,10.591c0,0.899-0.1,2.483-0.315,4.747 c-0.21,2.269-0.601,4.348-1.171,6.239l-5.82,20.605c-0.477,1.655-0.906,3.547-1.279,5.676c-0.385,2.115-0.569,3.731-0.569,4.815 c0,2.736,0.61,4.604,1.833,5.597c1.232,0.993,3.354,1.487,6.368,1.487c1.415,0,3.025-0.251,4.814-0.744 C76.854,100.348,78.155,99.915,78.962,99.536z M80.438,13.03c0,3.59-1.353,6.656-4.072,9.177c-2.712,2.53-5.98,3.796-9.803,3.796 c-3.835,0-7.111-1.266-9.854-3.796c-2.738-2.522-4.11-5.587-4.11-9.177c0-3.583,1.372-6.654,4.11-9.207 C59.447,1.274,62.729,0,66.563,0c3.822,0,7.091,1.277,9.803,3.823C79.087,6.376,80.438,9.448,80.438,13.03z"
                      fill="#2a272763"
                    />
                  </g>
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="card-image"
          >
            <img
              alt="cardMiscellaneousDescription"
              class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
              height="346"
              src="../../Assets/Images/launch.png"
            />
          </div>
          <div
            class="MuiCardContent-root card-desc css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              cardMiscellaneousDescription
            </p>
          </div>
          <div
            class="like-share-container"
          >
            <button
              aria-label="add to favorites"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-testid="feature-card-like-mui"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FavoriteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m12 21.35-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="share"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-testid="feature-card-share-mui"
              tabindex="0"
              type="button"
            >
              <button
                aria-label="🎉 Link Copied!"
                class="share-button"
                data-mui-internal-clone-element="true"
              >
                <svg
                  height="24px"
                  viewBox="0 0 64 64"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKd"
                    spreadMethod="reflect"
                    x1="32.001"
                    x2="32.001"
                    y1="53.501"
                    y2="10.5"
                  >
                    <stop
                      offset="0"
                      stop-color="#37ab6a"
                    />
                    <stop
                      offset=".422"
                      stop-color="#39b66f"
                    />
                    <stop
                      offset="1"
                      stop-color="#3ac074"
                    />
                  </lineargradient>
                  <path
                    d="M48.996,53.501c-0.676,0-1.362-0.153-2.009-0.476l-34-17C11.463,35.263,10.5,33.704,10.5,32 c0-1.704,0.963-3.263,2.487-4.025l34-17c2.226-1.109,4.926-0.21,6.038,2.013c1.111,2.223,0.21,4.926-2.013,6.038L25.062,32 l25.95,12.975c2.223,1.112,3.124,3.815,2.013,6.038C52.236,52.589,50.647,53.501,48.996,53.501z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKd)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKe"
                    spreadMethod="reflect"
                    x1="15"
                    x2="15"
                    y1="23"
                    y2="41"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M24,32c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S24,27.028,24,32z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKe)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKf"
                    spreadMethod="reflect"
                    x1="49"
                    x2="49"
                    y1="6"
                    y2="24"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M58,15c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,10.028,58,15z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKf)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKg"
                    spreadMethod="reflect"
                    x1="49"
                    x2="49"
                    y1="40"
                    y2="58"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M58,49c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,44.028,58,49z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKg)"
                  />
                </svg>
              </button>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="feature-card"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root feature-card-mui css-14cyfy1-MuiPaper-root-MuiCard-root"
          data-testid="feature-card-mui"
          id="uiLearnings"
        >
          <div
            class="MuiCardHeader-root feature-cardheader css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                cardUITitle
              </span>
            </div>
            <div
              class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
            >
              <button
                aria-label="cardUIInformation"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="info-card-mui"
                tabindex="0"
                type="button"
              >
                <svg
                  height="14px"
                  id="Capa_1"
                  version="1.1"
                  viewBox="0 0 111.577 111.577"
                  width="14px"
                  x="0px"
                  xml:space="preserve"
                  y="0px"
                >
                  <g>
                    <path
                      d="M78.962,99.536l-1.559,6.373c-4.677,1.846-8.413,3.251-11.195,4.217c-2.785,0.969-6.021,1.451-9.708,1.451 c-5.662,0-10.066-1.387-13.207-4.142c-3.141-2.766-4.712-6.271-4.712-10.523c0-1.646,0.114-3.339,0.351-5.064 c0.239-1.727,0.619-3.672,1.139-5.846l5.845-20.688c0.52-1.981,0.962-3.858,1.316-5.633c0.359-1.764,0.532-3.387,0.532-4.848 c0-2.642-0.547-4.49-1.636-5.529c-1.089-1.036-3.167-1.562-6.252-1.562c-1.511,0-3.064,0.242-4.647,0.71 c-1.59,0.47-2.949,0.924-4.09,1.346l1.563-6.378c3.829-1.559,7.489-2.894,10.99-4.002c3.501-1.111,6.809-1.667,9.938-1.667 c5.623,0,9.962,1.359,13.009,4.077c3.047,2.72,4.57,6.246,4.57,10.591c0,0.899-0.1,2.483-0.315,4.747 c-0.21,2.269-0.601,4.348-1.171,6.239l-5.82,20.605c-0.477,1.655-0.906,3.547-1.279,5.676c-0.385,2.115-0.569,3.731-0.569,4.815 c0,2.736,0.61,4.604,1.833,5.597c1.232,0.993,3.354,1.487,6.368,1.487c1.415,0,3.025-0.251,4.814-0.744 C76.854,100.348,78.155,99.915,78.962,99.536z M80.438,13.03c0,3.59-1.353,6.656-4.072,9.177c-2.712,2.53-5.98,3.796-9.803,3.796 c-3.835,0-7.111-1.266-9.854-3.796c-2.738-2.522-4.11-5.587-4.11-9.177c0-3.583,1.372-6.654,4.11-9.207 C59.447,1.274,62.729,0,66.563,0c3.822,0,7.091,1.277,9.803,3.823C79.087,6.376,80.438,9.448,80.438,13.03z"
                      fill="#2a272763"
                    />
                  </g>
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="card-image"
          >
            <img
              alt="cardUIDescription"
              class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
              height="346"
              src="../../Assets/Images/design.png"
            />
          </div>
          <div
            class="MuiCardContent-root card-desc css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              cardUIDescription
            </p>
          </div>
          <div
            class="like-share-container"
          >
            <button
              aria-label="add to favorites"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-testid="feature-card-like-mui"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FavoriteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m12 21.35-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="share"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-testid="feature-card-share-mui"
              tabindex="0"
              type="button"
            >
              <button
                aria-label="🎉 Link Copied!"
                class="share-button"
                data-mui-internal-clone-element="true"
              >
                <svg
                  height="24px"
                  viewBox="0 0 64 64"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKd"
                    spreadMethod="reflect"
                    x1="32.001"
                    x2="32.001"
                    y1="53.501"
                    y2="10.5"
                  >
                    <stop
                      offset="0"
                      stop-color="#37ab6a"
                    />
                    <stop
                      offset=".422"
                      stop-color="#39b66f"
                    />
                    <stop
                      offset="1"
                      stop-color="#3ac074"
                    />
                  </lineargradient>
                  <path
                    d="M48.996,53.501c-0.676,0-1.362-0.153-2.009-0.476l-34-17C11.463,35.263,10.5,33.704,10.5,32 c0-1.704,0.963-3.263,2.487-4.025l34-17c2.226-1.109,4.926-0.21,6.038,2.013c1.111,2.223,0.21,4.926-2.013,6.038L25.062,32 l25.95,12.975c2.223,1.112,3.124,3.815,2.013,6.038C52.236,52.589,50.647,53.501,48.996,53.501z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKd)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKe"
                    spreadMethod="reflect"
                    x1="15"
                    x2="15"
                    y1="23"
                    y2="41"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M24,32c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S24,27.028,24,32z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKe)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKf"
                    spreadMethod="reflect"
                    x1="49"
                    x2="49"
                    y1="6"
                    y2="24"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M58,15c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,10.028,58,15z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKf)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKg"
                    spreadMethod="reflect"
                    x1="49"
                    x2="49"
                    y1="40"
                    y2="58"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M58,49c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,44.028,58,49z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKg)"
                  />
                </svg>
              </button>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="feature-card"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root feature-card-mui css-14cyfy1-MuiPaper-root-MuiCard-root"
          data-testid="feature-card-mui"
          id="reactAndJSLearnings"
        >
          <div
            class="MuiCardHeader-root feature-cardheader css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                cardReactAndJSTitle
              </span>
            </div>
            <div
              class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
            >
              <button
                aria-label="cardReactAndJSInformation"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="info-card-mui"
                tabindex="0"
                type="button"
              >
                <svg
                  height="14px"
                  id="Capa_1"
                  version="1.1"
                  viewBox="0 0 111.577 111.577"
                  width="14px"
                  x="0px"
                  xml:space="preserve"
                  y="0px"
                >
                  <g>
                    <path
                      d="M78.962,99.536l-1.559,6.373c-4.677,1.846-8.413,3.251-11.195,4.217c-2.785,0.969-6.021,1.451-9.708,1.451 c-5.662,0-10.066-1.387-13.207-4.142c-3.141-2.766-4.712-6.271-4.712-10.523c0-1.646,0.114-3.339,0.351-5.064 c0.239-1.727,0.619-3.672,1.139-5.846l5.845-20.688c0.52-1.981,0.962-3.858,1.316-5.633c0.359-1.764,0.532-3.387,0.532-4.848 c0-2.642-0.547-4.49-1.636-5.529c-1.089-1.036-3.167-1.562-6.252-1.562c-1.511,0-3.064,0.242-4.647,0.71 c-1.59,0.47-2.949,0.924-4.09,1.346l1.563-6.378c3.829-1.559,7.489-2.894,10.99-4.002c3.501-1.111,6.809-1.667,9.938-1.667 c5.623,0,9.962,1.359,13.009,4.077c3.047,2.72,4.57,6.246,4.57,10.591c0,0.899-0.1,2.483-0.315,4.747 c-0.21,2.269-0.601,4.348-1.171,6.239l-5.82,20.605c-0.477,1.655-0.906,3.547-1.279,5.676c-0.385,2.115-0.569,3.731-0.569,4.815 c0,2.736,0.61,4.604,1.833,5.597c1.232,0.993,3.354,1.487,6.368,1.487c1.415,0,3.025-0.251,4.814-0.744 C76.854,100.348,78.155,99.915,78.962,99.536z M80.438,13.03c0,3.59-1.353,6.656-4.072,9.177c-2.712,2.53-5.98,3.796-9.803,3.796 c-3.835,0-7.111-1.266-9.854-3.796c-2.738-2.522-4.11-5.587-4.11-9.177c0-3.583,1.372-6.654,4.11-9.207 C59.447,1.274,62.729,0,66.563,0c3.822,0,7.091,1.277,9.803,3.823C79.087,6.376,80.438,9.448,80.438,13.03z"
                      fill="#2a272763"
                    />
                  </g>
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="card-image"
          >
            <img
              alt="cardReactAndJSDescription"
              class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
              height="346"
              src="../../Assets/Images/code.png"
            />
          </div>
          <div
            class="MuiCardContent-root card-desc css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              cardReactAndJSDescription
            </p>
          </div>
          <div
            class="like-share-container"
          >
            <button
              aria-label="add to favorites"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-testid="feature-card-like-mui"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FavoriteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m12 21.35-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="share"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-testid="feature-card-share-mui"
              tabindex="0"
              type="button"
            >
              <button
                aria-label="🎉 Link Copied!"
                class="share-button"
                data-mui-internal-clone-element="true"
              >
                <svg
                  height="24px"
                  viewBox="0 0 64 64"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKd"
                    spreadMethod="reflect"
                    x1="32.001"
                    x2="32.001"
                    y1="53.501"
                    y2="10.5"
                  >
                    <stop
                      offset="0"
                      stop-color="#37ab6a"
                    />
                    <stop
                      offset=".422"
                      stop-color="#39b66f"
                    />
                    <stop
                      offset="1"
                      stop-color="#3ac074"
                    />
                  </lineargradient>
                  <path
                    d="M48.996,53.501c-0.676,0-1.362-0.153-2.009-0.476l-34-17C11.463,35.263,10.5,33.704,10.5,32 c0-1.704,0.963-3.263,2.487-4.025l34-17c2.226-1.109,4.926-0.21,6.038,2.013c1.111,2.223,0.21,4.926-2.013,6.038L25.062,32 l25.95,12.975c2.223,1.112,3.124,3.815,2.013,6.038C52.236,52.589,50.647,53.501,48.996,53.501z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKd)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKe"
                    spreadMethod="reflect"
                    x1="15"
                    x2="15"
                    y1="23"
                    y2="41"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M24,32c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S24,27.028,24,32z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKe)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKf"
                    spreadMethod="reflect"
                    x1="49"
                    x2="49"
                    y1="6"
                    y2="24"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M58,15c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,10.028,58,15z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKf)"
                  />
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="qleorMOLqjiXYpxSjD5yKg"
                    spreadMethod="reflect"
                    x1="49"
                    x2="49"
                    y1="40"
                    y2="58"
                  >
                    <stop
                      offset="0"
                      stop-color="#62de8f"
                    />
                    <stop
                      offset=".478"
                      stop-color="#5dd18d"
                    />
                    <stop
                      offset="1"
                      stop-color="#56be89"
                    />
                  </lineargradient>
                  <path
                    d="M58,49c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,44.028,58,49z"
                    fill="url(#qleorMOLqjiXYpxSjD5yKg)"
                  />
                </svg>
              </button>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Features Page renders Features Page Cards 1`] = `
<div>
  <div
    class="feature-cards-conatainer"
  >
    <div
      class="feature-card"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root feature-card-mui css-14cyfy1-MuiPaper-root-MuiCard-root"
        data-testid="feature-card-mui"
        id="miscellaneousCoolStuff"
      >
        <div
          class="MuiCardHeader-root feature-cardheader css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
            >
              cardMiscellaneousTitle
            </span>
          </div>
          <div
            class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
          >
            <button
              aria-label="cardMiscellaneousInformation"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              data-testid="info-card-mui"
              tabindex="0"
              type="button"
            >
              <svg
                height="14px"
                id="Capa_1"
                version="1.1"
                viewBox="0 0 111.577 111.577"
                width="14px"
                x="0px"
                xml:space="preserve"
                y="0px"
              >
                <g>
                  <path
                    d="M78.962,99.536l-1.559,6.373c-4.677,1.846-8.413,3.251-11.195,4.217c-2.785,0.969-6.021,1.451-9.708,1.451 c-5.662,0-10.066-1.387-13.207-4.142c-3.141-2.766-4.712-6.271-4.712-10.523c0-1.646,0.114-3.339,0.351-5.064 c0.239-1.727,0.619-3.672,1.139-5.846l5.845-20.688c0.52-1.981,0.962-3.858,1.316-5.633c0.359-1.764,0.532-3.387,0.532-4.848 c0-2.642-0.547-4.49-1.636-5.529c-1.089-1.036-3.167-1.562-6.252-1.562c-1.511,0-3.064,0.242-4.647,0.71 c-1.59,0.47-2.949,0.924-4.09,1.346l1.563-6.378c3.829-1.559,7.489-2.894,10.99-4.002c3.501-1.111,6.809-1.667,9.938-1.667 c5.623,0,9.962,1.359,13.009,4.077c3.047,2.72,4.57,6.246,4.57,10.591c0,0.899-0.1,2.483-0.315,4.747 c-0.21,2.269-0.601,4.348-1.171,6.239l-5.82,20.605c-0.477,1.655-0.906,3.547-1.279,5.676c-0.385,2.115-0.569,3.731-0.569,4.815 c0,2.736,0.61,4.604,1.833,5.597c1.232,0.993,3.354,1.487,6.368,1.487c1.415,0,3.025-0.251,4.814-0.744 C76.854,100.348,78.155,99.915,78.962,99.536z M80.438,13.03c0,3.59-1.353,6.656-4.072,9.177c-2.712,2.53-5.98,3.796-9.803,3.796 c-3.835,0-7.111-1.266-9.854-3.796c-2.738-2.522-4.11-5.587-4.11-9.177c0-3.583,1.372-6.654,4.11-9.207 C59.447,1.274,62.729,0,66.563,0c3.822,0,7.091,1.277,9.803,3.823C79.087,6.376,80.438,9.448,80.438,13.03z"
                    fill="#2a272763"
                  />
                </g>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="card-image"
        >
          <img
            alt="cardMiscellaneousDescription"
            class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="346"
            src="../../Assets/Images/launch.png"
          />
        </div>
        <div
          class="MuiCardContent-root card-desc css-46bh2p-MuiCardContent-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
          >
            cardMiscellaneousDescription
          </p>
        </div>
        <div
          class="like-share-container"
        >
          <button
            aria-label="add to favorites"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            data-testid="feature-card-like-mui"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FavoriteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 21.35-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-label="share"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            data-testid="feature-card-share-mui"
            tabindex="0"
            type="button"
          >
            <button
              aria-label="🎉 Link Copied!"
              class="share-button"
              data-mui-internal-clone-element="true"
            >
              <svg
                height="24px"
                viewBox="0 0 64 64"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="qleorMOLqjiXYpxSjD5yKd"
                  spreadMethod="reflect"
                  x1="32.001"
                  x2="32.001"
                  y1="53.501"
                  y2="10.5"
                >
                  <stop
                    offset="0"
                    stop-color="#37ab6a"
                  />
                  <stop
                    offset=".422"
                    stop-color="#39b66f"
                  />
                  <stop
                    offset="1"
                    stop-color="#3ac074"
                  />
                </lineargradient>
                <path
                  d="M48.996,53.501c-0.676,0-1.362-0.153-2.009-0.476l-34-17C11.463,35.263,10.5,33.704,10.5,32 c0-1.704,0.963-3.263,2.487-4.025l34-17c2.226-1.109,4.926-0.21,6.038,2.013c1.111,2.223,0.21,4.926-2.013,6.038L25.062,32 l25.95,12.975c2.223,1.112,3.124,3.815,2.013,6.038C52.236,52.589,50.647,53.501,48.996,53.501z"
                  fill="url(#qleorMOLqjiXYpxSjD5yKd)"
                />
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="qleorMOLqjiXYpxSjD5yKe"
                  spreadMethod="reflect"
                  x1="15"
                  x2="15"
                  y1="23"
                  y2="41"
                >
                  <stop
                    offset="0"
                    stop-color="#62de8f"
                  />
                  <stop
                    offset=".478"
                    stop-color="#5dd18d"
                  />
                  <stop
                    offset="1"
                    stop-color="#56be89"
                  />
                </lineargradient>
                <path
                  d="M24,32c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S24,27.028,24,32z"
                  fill="url(#qleorMOLqjiXYpxSjD5yKe)"
                />
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="qleorMOLqjiXYpxSjD5yKf"
                  spreadMethod="reflect"
                  x1="49"
                  x2="49"
                  y1="6"
                  y2="24"
                >
                  <stop
                    offset="0"
                    stop-color="#62de8f"
                  />
                  <stop
                    offset=".478"
                    stop-color="#5dd18d"
                  />
                  <stop
                    offset="1"
                    stop-color="#56be89"
                  />
                </lineargradient>
                <path
                  d="M58,15c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,10.028,58,15z"
                  fill="url(#qleorMOLqjiXYpxSjD5yKf)"
                />
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="qleorMOLqjiXYpxSjD5yKg"
                  spreadMethod="reflect"
                  x1="49"
                  x2="49"
                  y1="40"
                  y2="58"
                >
                  <stop
                    offset="0"
                    stop-color="#62de8f"
                  />
                  <stop
                    offset=".478"
                    stop-color="#5dd18d"
                  />
                  <stop
                    offset="1"
                    stop-color="#56be89"
                  />
                </lineargradient>
                <path
                  d="M58,49c0,4.972-4.028,9-9,9s-9-4.028-9-9s4.028-9,9-9S58,44.028,58,49z"
                  fill="url(#qleorMOLqjiXYpxSjD5yKg)"
                />
              </svg>
            </button>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
